# silent-shard-dkls23-ll

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.wasm  LICENSE  LICENSE.md  README.md
.github/workflows/: release-please.yml  release.yml  rust-tests.yml
ci/: build-npm-packages.sh
src/: constants.rs  dkg.rs  dsg.rs  dsg_ot_variant.rs  error.rs  lib.rs  pairs.rs  utils.rs
src/vrf/: dkg.rs  eval.rs  hard_derivation.rs  hard_derive_root.rs  messages.rs  mod.rs  types.rs
wrapper/wasm-ll/: .npmrc  Cargo.toml  README.md  debug_test.js
wrapper/wasm-ll/src/: errors.rs  hard_derive.rs  keygen.rs  keyshare.rs  lib.rs  message.rs  sign.rs  sign_ot_variant.rs  utils.rs  vrf_keygen.rs  vrf_keyshare.rs  vrf_session.rs
wrapper/wasm-ll/tests/: hard_derive.rs  hard_derive.ts  keygen.ts  tests.ts  vrf.rs
wrapper/wasm-ll/tests/common/: mod.rs
