[package]
name = "dkls-wasm-ll"
license = "SLL"
version = "1.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wee_alloc = "0.4.5"
derivation-path.workspace = true
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6.4"
js-sys = "0.3"
dkls23-ll = { path = "../.." }
sl-mpc-mate = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
ciborium = "0.2.1"
serde = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
